stopwatch activity overflow issue fixed

--- a/activities/Stopwatch.activity/css/activity.css
+++ b/activities/Stopwatch.activity/css/activity.css
@@ -10,7 +10,9 @@
 #fullscreen-button {
   background-image: url(../icons/view-fullscreen.svg);
 }
-
+body{
+  overflow: hidden;
+}
 #unfullscreen-button {
   background-image: url(../icons/view-return.svg);
   border: 0;
